# codeq

./: .air.toml  .dockerignore  .env.example  .gitignore  .golangci.yml  .testcoverage.yml  CHANGELOG.md  CODE_REVIEW_RESPONSES.md  CONTRIBUTING.md  DAILY_STATUS_REVIEW_FEB_16_2026.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATUS.md  MISSING_ISSUES.md  Makefile  QUICK_REFERENCE.md  README.md  SDK_INTEGRATION_OVERVIEW.md  SONIC_JSON_OPTIMIZATION.md  TASK_SUMMARY.md  TROUBLESHOOTING.md  UPDATE_DOCS_FAILURE_ANALYSIS.md  UPDATE_DOCS_FAILURE_ANALYSIS_22048567544.md  WORKFLOW_FAILURES_INDEX.md  WORKFLOW_FAILURE_ANALYSIS.md  WORKFLOW_FIX_INSTRUCTIONS.md  config.example.yml  create-missing-issues.sh  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  index.html  install.sh  test.sh
.github/: AGENTIC_WORKFLOWS.md  DISCUSSIONS_CATEGORY_RECOMMENDATION.md  DISCUSSIONS_GUIDE.md
docs/: 00-getting-started.md  01-overview.md  02-domain-model.md  03-architecture.md  04-http-api.md  05-cluster-architecture.md  05-queueing-model.md  06-sharding.md  06b-lease-management.md  07-storage-kvrocks.md  07b-storage-pebble.md  08-consistency.md  08b-pebble-sharding-internals.md  09-security.md  10-operations.md  11-backoff.md  12-webhooks.md  13-examples.md  14-configuration.md  15-cli-reference.md  16-performance-tuning.md  16-workflows.md  17-performance-tuning.md  18-developer-guide.md  18-package-reference.md  18-performance-tuning.md  18-testing.md  19-testing.md  (+38 more)
sdks/python/: .coverage  README.md  pyproject.toml
sdks/python/src/codeq/: __init__.py  client.py  exceptions.py  sync_client.py  types.py
sdks/python/tests/: test_client.py  test_sync_client.py
(+492 files in other folders)
