[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeq-client"
version = "1.0.0"
description = "Official Python SDK for the CodeQ reactive task scheduling system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Osvaldo Andrade" },
]
keywords = ["codeq", "task-queue", "scheduling", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27.0,<1.0.0",
    "tenacity>=8.2.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/osvaldoandrade/codeq"
Documentation = "https://github.com/osvaldoandrade/codeq/tree/main/docs"
Repository = "https://github.com/osvaldoandrade/codeq"
Issues = "https://github.com/osvaldoandrade/codeq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codeq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.coverage.run]
source = ["codeq"]

[tool.coverage.report]
fail_under = 80
show_missing = true
